Fix restaurant overview horizontal scrollbar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,17 @@ nav h1 a {
     padding-left: 0;
     text-align: center;
   }
+/* ====================== Restaurants Overview ====================== */
+	#restaurants-list li {
+		background-color: #fff;
+		border: 2px solid #ccc;
+		font-family: Arial,sans-serif;
+		margin: 0;
+		padding: 0 0 25px;
+		text-align: left;
+		width: 98%;
+	}
+
 /* ====================== Restaurant Details ====================== */
 	.filter-options {
 		display: flex;
